# pixel-peep

./: .env  .gitignore  Makefile  README.md  image.py  index.js  package-lock.json  package.json  pixelpeep.py  pixr.py  pyproject.toml  requirements.txt  server.js  test-mongo.js  test_image.py  train.py  train_images.py
Challenge_1/: detect-duplicate.css  detect-duplicate.jsx  styles.css
backend/: README.md  main.py  requirements.txt  test.py  train.py
backend/services/: graph.py  image_compare.py
docs/: API.md
examples/: basic_usage.py
frontend/: README.md  package-lock.json
frontend/src/: index.css
frontend/src/components/: FileUploader.tsx  Image.tsx  ImageGroups.tsx
frontend/src/pages/: Home.tsx  index.tsx
frontend/src/services/: axiosInstance.ts  imageServices.ts
imagecompare/: __init__.py
imagecompare/api/: cli.py  web.py
imagecompare/core/: preprocessing.py
imagecompare/core/comparators/: __init__.py  histogram.py  phash.py  pixel.py  ssim.py
my-app/: index.html  package-lock.json  package.json
my-app/src/: App.jsx
pixel_peep/: db.sqlite3  manage.py
pixel_peep/image_trace/: admin.py  apps.py  models.py  urls.py  views.py
pixel_peep/image_trace/migrations/: 0001_initial.py
pixel_peep/pixel_peep/: asgi.py  settings.py  urls.py  wsgi.py
pixel_peep/static/css/: style1.css  style2.css  style3.css
pixel_peep/templates/: edited_img_upload.html  home_page.html  images_upload.html
public/: index.html
src/: __init__.py
src/python/: __init__.py  normalize_image.py  pHash.py
tests/: __init__.py  run_tests.py  test_api.py
(+1 files in other folders)
